--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="평화로운 청소마을.. 그리고 심판의 날"
+      content="즐거운 청소 - 평화로운 청소마을.. 그리고 심판의 날"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
