--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="즐청: 즐거운 청소 - 평화로운 청소마을.. 그리고 심판의 날"
+      content="KIN Clean 즐청: 즐거운 청소 - 평화로운 청소마을.. 그리고 심판의 날"
     />
+    
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kinclean.netlify.app/">
+    <meta property="og:title" content="즐청">
+    <meta property="og:image" content="/src/assets/icons/clapping-hands.png">
+    <meta property="og:description" content="KIN Clean 즐청: 즐거운 청소 - 평화로운 청소마을.. 그리고 심판의 날">
+    <meta property="og:site_name" content="즐청">
+    <meta property="og:locale" content="ko_KR">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
