--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kinclean.netlify.app/">
-    <!-- <meta property="og:site_name" content="즐청">
+    <meta property="og:site_name" content="즐청">
     <meta property="og:title" content="즐청">
     <meta property="og:description" content="즐청: 즐거운 청소 - 평화로운 청소마을.. 그리고 심판의 날">
-    <meta property="og:locale" content="ko_KR"> -->
+    <meta property="og:locale" content="ko_KR">
     <meta property="og:image" content="%PUBLIC_URL%/lu.png">
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/comet.png" />
